# SnapProofPrintHelperForPWA

./: .browserslistrc  .gitignore  .markdownlint.json  README.zh.md  biome.json  localizedManifest.ts  manifest.json  os_notices.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tsconfig.json
.github/workflows/: github-pages.yml
docs/: CONTRIBUTING.md
docs/dev/: README.md
docs/legal/: os_notices.md  os_notices_template.ts
patches/: @material__tooltip.patch  @suid__base.patch  @suid__material.patch  @suid__styled-engine.patch
scripts/docs/: generate_os_notices.ts
src/: App.tsx  constants.ts  index.browser.html  index.html  index.tauri.html  index.tsx  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/atoms/: snapProofPrint.ts
src/components/: StatefulImage.tsx
src/contexts/: GlobalLocaleConfigContext.tsx
src/hooks/: createCurrentLocale.ts  createGlobalTranslator.ts  createSheetOpenedState.ts  makeDisableDefaultContextMenuListener.ts  makeDisableDefaultDropListener.ts  makeDisableDefaultF5Listener.ts  makeDisableDropListener.ts  makeMeta.ts  print.ts  syncState.ts  useDisplayStandaloneMode.ts  usePreferredDarkMode.ts
src/locales/: index.ts  manifest.ts
src/routes/: __root.tsx  index.tsx
src/styles/: index.scss  reset.scss
src/themes/: appTheme.ts  theme.ts
src/types/: defines.d.ts  env.d.ts  snap-proof-print.ts  snapProofPrint.ts
src/utils/: atom.ts  file.ts  grid.ts  platform.ts  suid.ts
(+86 files in other folders)
