[package]
name = "SnapProofPrintHelper"
version = "0.1.0"
description = "Print multiple transfer record diagrams, e-commerce order diagrams, and so on in a voucher style onto paper,and add cutting lines."
authors = ["Jesse205"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://gitee.com/HelloTool/SnapProofPrintHelperForPWA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snap_proof_print_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
